--- a/views/form-edit-confirm.html
+++ b/views/form-edit-confirm.html
@@ -53,7 +53,7 @@
                     Name: <strong class="text-light-blue">{{vm.person.temp_person_infos[0].spouse_first_name}} {{vm.person.temp_person_infos[0].spouse_middle_name.charAt(0)}}. {{vm.person.temp_person_infos[0].spouse_last_name}}</strong>
                     <br />
                      Date of birth: <strong class="text-light-blue">{{vm.person.temp_person_infos[0].spouse_date_of_birth | date:'MMMM dd, yyyy'}}</strong>
-                    <br /> Gender: <strong class="text-light-blue">{{vm.person.temp_person_infos[0].gender}}</strong>
+                    <br /> Gender: <strong class="text-light-blue">{{vm.person.temp_person_infos[0].spouse_gender}}</strong>
                 </address>
             <h5><strong class="text-light-blue">Children</strong></h5>
               <table class="table table-striped">
