--- a/views/form-edit-parents.html
+++ b/views/form-edit-parents.html
@@ -142,6 +142,6 @@
     </form>
 
     <div class="col-xs-2 col-xs-offset-3 pull-right">
-        <a ui-sref="form-edit.confirm({personId : personId})" class="btn btn-block btn-primary">
+        <a ui-sref="form-edit.confirm({personId : personId})" class="btn btn-block btn-primary" ng-click="vm.setProfile()">
     Next<span class="fa  fa-arrow-right"></span>
     </a></div>
