--- a/views/form-profile.html
+++ b/views/form-profile.html
@@ -41,7 +41,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label>Civil Status</label>
-                                <select class="form-control" ng-model="vm.person.civilStatus" ng-init="vm.person.civilStatus='Single'">
+                                <select class="form-control" ng-model="temp_person_infos[0].civil_status" ng-init="">
                                     <option ng-selected="true">Single</option>
                                     <option>Married</option>
                                     <option>Widowed</option>
