--- a/views/form-edit.html
+++ b/views/form-edit.html
@@ -11,7 +11,7 @@
           <div id="status-buttons" class="text-center">
               <a ui-sref-active="active" ui-sref=".address"><span>1</span> Residence</a>
               <a ui-sref-active="active" ui-sref=".profile"><span>2</span> Profile</a>
-              <a ui-sref-active="active" ui-sref=".parents"><span>3</span> Parent</a>
+              <a ui-sref-active="active" ui-sref="form-edit.parents({personId : personId})"><span>3</span> Parent</a>
               <a ui-sref-active="active" ui-sref=".confirm"><span>4</span> Review</a>
           </div>
       </div>
