--- a/views/persons.html
+++ b/views/persons.html
@@ -47,7 +47,7 @@
                                     <td>{{row.date_of_birth | date: 'MMMM dd, yyyy'}} </td>
                                     <td>{{row.place_of_birth}}</td>
                                     <td>
-                                        <button type="button" ng-click="vm.toggleViewCensus($index)" class="btn btn-sm btn-success">
+                                        <button type="button" ng-click="vm.toggleViewPerson($index)" class="btn btn-sm btn-success">
                                             <i class="fa fa-eye"></i>
                                         </button>
                                         &nbsp;
@@ -73,7 +73,7 @@
         <!-- /.col -->
     </div>
     <div ui-view></div>
-    <modal title="Census Info" visible="vm.showViewCensusModal" >
+    <modal title="Census Info" visible="vm.showViewPersonModal" >
         <div class="row">
             <div class="col-xs-12">
                 <h2 class="page-header" ng-click="isCollapsed1 = !isCollapsed1">
