--- a/views/form-confirm.html
+++ b/views/form-confirm.html
@@ -2,6 +2,10 @@
     <span class="fa fa-thumbs-up"></span>
     <h3>Almost Done!</h3>
 </div>
+
+<div class="row">
+    <p>{{vm.person}}</p>
+</div><!-- /.row -->
 <!-- <section class="invoice"> -->
     <div class="panel box box-primary">
         <div class="box-header with-border">
