--- a/views/form-parents.html
+++ b/views/form-parents.html
@@ -1,4 +1,9 @@
 <form role="form" name="ParentForm">
+
+<div class="row">
+    <p>{{vm.person}}</p>
+</div><!-- /.row -->
+
 <div class="row">
     <div class="panel  panel-default">
         <div class="panel-heading">
